@startuml

'The field types are from <https://www.sqlite.org/datatype3.html>.

entity "Recipe" as recipe {
  id: INTEGER
  --
  name: TEXT
}

entity "Recipe Step" as recipe_step {
  id: INTEGER
  --
  order: INTEGER
  description: TEXT
}
recipe_step }o--|| "recipe_id" recipe

entity "Recipe Step Ingredient" as recipe_step_ingredient {
  id: INTEGER
  --
  order: INTEGER
  quantity: ?REAL
  unit: ?TEXT
  quality: ?TEXT
}
recipe_step_ingredient }o--|| "recipe_step_id" recipe_step

entity "Recipe Ingredient Draft" as recipe_ingredient_draft {
  id: INTEGER
  --
  order: INTEGER
  text: TEXT
}
recipe_ingredient_draft }o--|| "recipe_id" recipe

entity "Recipe Step Ingredient Draft" as recipe_step_ingredient_draft {
  id: INTEGER
  --
  order: INTEGER
  text: TEXT
}
recipe_step_ingredient_draft }o--|| "recipe_step_id" recipe_step

entity "Ingredient" as ingredient {
  id: INTEGER
  --
  name: TEXT
}
ingredient "ingredient_id" ||--o{ recipe_step_ingredient

entity "Recipe File" as recipe_file {
  id: INTEGER
  --
  order: INTEGER
}
recipe_file }o--|| "recipe_id" recipe

entity "Recipe Step File" as recipe_step_file {
  id: INTEGER
  --
  order: INTEGER
}
recipe_step_file }o--|| "recipe_step_id" recipe_step

entity "Unit Name" as unit_name {
  name: TEXT
  --
  unit: TEXT
}

entity "File" as file {
  id: INTEGER
  --
  name: TEXT
  mime: TEXT
  path: TEXT
}
recipe_step_file }o--|| "file_id" file
recipe_file }o--|| "file_id" file

@enduml